# ddos_watchdog

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  configure_cmake.sh
cmake/: FindPCAP.cmake  include_libraries.cmake
env/: init_vnet.sh  ip_flood.sh  legal_tcp.sh  legal_udp.sh  sample_server.py  udp_flood.sh
env/pcaps/: protocols.abc  protocols.pcap  udp_flood.pcap
samples/: net_bridge.cc
src/: CMakeLists.txt  main.cc
src/core/: CMakeLists.txt  config.cc  config.h  detector_manager.cc  detector_manager.h  inline_set.cc  inline_set.h  logger.cc  logger.h  net_defines.h  sniffer.cc  sniffer.h  thread_context.cc  thread_context.h  watchdog.cc  watchdog.h
src/detectors/: CMakeLists.txt  detector.h  ip_flood_analyzer.cc  ip_flood_analyzer.h  network_analyzer.cc  network_analyzer.h  udp_flood_analyzer.cc  udp_flood_analyzer.h
